[package]
authors = [
	"Jorge Aparicio <japaricious@gmail.com>",
	"Jonathan 'theJPster' Pallant <github@thejpster.org.uk>",
	"Per Lindgren <per.lindgren@ltu.se>"
]
description = "Volatile access to memory mapped hardware registers"
documentation = "https://docs.rs/volatile-register"
keywords = ["no-std", "volatile", "register"]
license = "MIT OR Apache-2.0"
name = "volatile-register"
repository = "https://github.com/japaric/volatile-register"
version = "0.2.0"

[patch.crates-io]
vcell = { git = "https://github.com/perlindgren/vcell.git", branch = "trustit" }

[dependencies]
vcell = "0.1.2"

[features]
klee-analysis = ["vcell/klee-analysis"]
